--- a/CS50x/week8/pset8/homepage/index.html
+++ b/CS50x/week8/pset8/homepage/index.html
@@ -8,6 +8,116 @@
         <title>My Webpage</title>
     </head>
     <body>
-        hello, homepage
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a href="#"><img src="./images/name.png" id="name"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./nature/nature.html">Nature Photography
+                        <br>
+                        <img src="./images/flwrIcon.jpeg" id="flwrIcon">
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./math/math.html">Example Math Lesson
+                        <br>
+                        <img src="./images/225.jpg" id="math">
+                    </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./cupcakes/cupcakes.html">CupCakes Inc.
+                        <br>
+                        <img src="./images/cpckIcon.jpeg" id="cpck">
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+        <div class="main">
+            <div class="intro">
+                <div class="card">
+                    <img src="./images/theGayParade.jpg" class ="card-img-top">
+                    <h3 id="pride"><em>Hi! This is me</em></h3>
+                </div>
+                <div class="card">
+                    <img src="./images/thumbsUpAMsterdam.jpg" class ="card-img-top">
+                    <h5 id="thumb"><em>Also me</em></h3>
+                </div>
+                <div class="card">
+                    <img src="./images/urbanDictJack.png" class ="card-img-top">
+                    <h5 id="urb"><em>Awfully flattering Urban Dictionary definition of "Jack"</em></h3>
+                </div>
+            </div>
+
+            <div class="accordion bios">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      Ch. 1 - Life
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong> In the beginning, Jack was created. <br> This has made a lot of people very angry and has been widely regarded as a bad move. </strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      Ch. 2 - Death
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      <strong> Thanks for getting this far! Clicking so many buttons is not easy you know, you should be proud of yourself. </strong>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                     Ch. 3 - Rebirth
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                      Now that you've gotten a taste of my sense of humor, why don't you learn something else about me. Check out the links above to see an example of a math quiz I'd give to my students, some of the nature photos I take on hikes, and my sales pitch for the future cupcake company that my sister and I are no doubt going to turn into a success.
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="middle">
+                <div class="card">
+                    <img src="./images/lionsHead.jpeg" class ="card-img-top">
+                    <h5 id="thumb"><em>I love to hike</em></h3>
+                </div>
+                <div class="card">
+                    <img src="./images/type2Fun.jpg" class ="card-img-top">
+                    <h3 id="pride"><em>In just about any weather</em></h3>
+                </div>
+                <div class="card" id="shirtless">
+                    <img src="./images/coldAndShirtless.jpeg" class ="card-img-top">
+                    <h5 id="urb"><em>Don't believe me?</em></h3>
+                </div>
+                <div class="card">
+                    <img src="./images/kinsmanGrin.jpg" class ="card-img-top">
+                    <h5 id="thumb"><em>These days things are quieter</em></h3>
+                </div>
+                <div class="card">
+                    <img src="./images/teaching.png" class ="card-img-top">
+                    <h3 id="pride"><em>And I'm a teacher!</em></h3>
+                </div>
+            </div>
+        </div>
+
+        
     </body>
 </html>
