--- a/CS50x/week8/pset8/homepage/cupcakes/cupcakes.html
+++ b/CS50x/week8/pset8/homepage/cupcakes/cupcakes.html
@@ -10,11 +10,33 @@
 <body>
     <div class="header">
         <img src="./cupcakesImages/logo.png">
-        <ul>
-            <li><a href="https://www.instagram.com/queen.of.eatss/">About</a></li>
-            <li><a href="https://www.instagram.com/queen.of.eatss/">Login</a></li>
-            <li><a href="https://www.instagram.com/queen.of.eatss/">Donate</a></li>
-        </ul>
+        <div class="container-fluid frosting">
+            <a href="../index.html"><img src="../images/name.png" id="name"></a>
+            <div class="collapse navbar-collapse">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../nature/nature.html">Nature Photography
+                      <img src="../images/flwrIcon.jpeg" id="flwrIcon">
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../math/math.html">Example Math Lesson
+                      <img src="../images/225.jpg" id="math">
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../cupcakes/cupcakes.html">CupCakes Inc.
+                      <img src="../images/cpckIcon.jpeg" id="cpck">
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <ul>
+                <li><a href="https://www.instagram.com/queen.of.eatss/">About</a></li>
+                <li><a href="https://www.instagram.com/queen.of.eatss/">Login</a></li>
+                <li><a href="https://www.instagram.com/queen.of.eatss/">Donate</a></li>
+            </ul>
+        </div>
     </div>
     <div class="main">
         <div class="Grabber">
